# StockNewsAPIalertproject

./: main.py  pyproject.toml
