[tool.poetry]
name = "stocknewsapialertproject"
version = "0.1.0"
description = ""
authors = ["Vidit <vidit01purohit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
twilio = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

